# django-project

./: README.md  pyproject.toml
mysite/: Makefile  db.sqlite3
mysite/mysite/: settings.py  urls.py
mysite/polls/: admin.py  models.py  tests.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/templates/polls/: detail.html  index.html  results.html
mysite/quiz/: admin.py  models.py  sample.py  sqllog  urls.py  views.py
mysite/quiz/migrations/: 0001_initial.py
mysite/quiz/static/quiz/: index.js  style.css
mysite/quiz/templates/quiz/: answer.html  base.html  detail.html  index.html  results.html
mysite/quiz/tests/: test_models.py
